<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgrey" >
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="20dip">
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <EditText
                android:id="@+id/writeToUs_et_name" 
                android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/fields_bg"
                    android:drawableLeft="@drawable/signup_name"
                    android:drawablePadding="5dip"
                    android:drawableStart="@drawable/signup_name"
                    android:hint="@string/sign_up_name"
                    android:textColorHint="@color/client_cyan"
                    android:inputType="textPersonName"
                    android:padding="5dip"/>
            
            <EditText 
                android:id="@+id/writeToUs_et_email"
                android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/fields_bg"
                    android:drawableLeft="@drawable/login_mail"
                    android:drawablePadding="5dip"
                    android:drawableStart="@drawable/login_mail"
                    android:hint="@string/login_email"
                    android:textColorHint="@color/client_cyan"
                    android:inputType="textEmailAddress"
                    android:padding="5dip"/>
            
            <EditText 
                android:id="@+id/writeToUs_et_phone"
                android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/fields_bg"
                    android:drawableLeft="@drawable/signup_phone"
                    android:drawablePadding="5dip"
                    android:drawableStart="@drawable/signup_phone"
                    android:hint="@string/sign_up_phone"
                    android:textColorHint="@color/client_cyan"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="5dip"/>
            
            <EditText 
                android:id="@+id/writeToUs_et_message"
                android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/fields_bg"
                    android:drawableLeft="@drawable/icon_mesage"
                    android:drawablePadding="5dip"
                    android:drawableStart="@drawable/icon_mesage"
                    android:hint="Message"
                    android:textColorHint="@color/client_cyan"
                    android:padding="5dip"
                    android:maxLength="250"
                    android:maxLines="3"/>
            
            <TableRow 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dip">
                <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_length"
                android:textColor="@color/black"/>
                <TextView
                android:id="@+id/writeToUs_tv_length" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="250"
                android:textColor="@color/black"/>
            </TableRow>
            
            
            <Button
                android:id="@+id/writeToUs_btn_submit" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:layout_gravity="center_horizontal"
                android:text="SUBMIT"
                android:textColor="@color/white"
                android:background="@drawable/button_submit"/>
            
        </LinearLayout>
        
    </ScrollView>

</LinearLayout>
